# blue-eyes-rs

./: .gitignore  Cargo.toml  README.md
file_templates/: bundle_config.template  config_ru.template  controller.template  controller_belongs_to.template  env_file.template  gemfile.template  model.template  new_table.template  paths_config.template  tailwind_config.template
project_template/: .gitignore
project_template/app/controllers/: application_controller.rb  home_controller.rb  sessions_controller.rb  users_controller.rb
project_template/app/services/: login_service.rb  users_service.rb
project_template/app/styles/: application.tailwind.css
project_template/app/views/: home_index.haml  layout.haml  login.haml  users_edit.haml  users_new.haml
project_template/helpers/: error.rb  paths_helper.rb
project_template/public/stylesheets/: application.css  custom.css
src/: bundle.rs  dirs.rs  main.rs  migrate.rs  project.rs  template_writer.rs  writable_template.rs
src/cli_commands/: cli.rs  mod.rs  project.rs  resource.rs
src/utils/: fget.rs  mod.rs  render.rs
src/utils/tmpl/: bundle_config.rs  config_ru.rs  controller.rs  envfile.rs  gemfile.rs  migration.rs  mod.rs  model.rs  paths_config.rs  tw.rs
