[package]
name = "blue_eyes"
version = "0.1.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
clap = { version = "4.5.17", features = ["cargo", "derive"] }
colored = "2.1.0"
env_logger = "0.11.5"
reqwest = { version = "0.12.7", features = ["blocking"] }
rust-embed = "8.5.0"
tera = "1.20.0"
toml = "0.8.19"
